# Fastapi-example-base-app

./: docker-compose.yml  pyproject.toml
fastapi-application/: .env.template  create_fastapi_app.py  main.py
fastapi-application/alembic/versions/: 2025_12_24_2151-1afd0896ffa6_create_users_table.py  2025_12_25_1952-28e314929513_create_access_tokens_table.py
fastapi-application/api/api_v1/: __init__.py
fastapi-application/api/dependencies/: access_tokens.py  strategy.py  users.py
fastapi-application/core/: config.py
fastapi-application/core/authentication/: transport.py
fastapi-application/core/models/: __init__.py  access_token.py  base.py  db_helper.py  user.py
fastapi-application/core/models/mixins/: int_id_pk.py
fastapi-application/utils/: __init__.py
